[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ct-radar"
version = "0.1.0"
description = "CT Radar CLI - Search Certificate Transparency logs for domains"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "CT Radar" }]
keywords = ["certificate-transparency", "ct-logs", "security", "recon", "subdomain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/imfht/ct-radar-cli"
Issues = "https://github.com/imfht/ct-radar-cli/issues"

[project.scripts]
ct-radar = "ct_radar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ct_radar"]
